--- a/api-mongo/api-mongo-rc-nocheck.yaml
+++ b/api-mongo/api-mongo-rc-nocheck.yaml
@@ -2,18 +2,18 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
-    name: api-mongo
-  name: api-mongo-controller
+    name: api-nocheck
+  name: api-nocheck-rc
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: api-mongo
+        name: api-nocheck
     spec:
       containers:
       - image: ipedrazas/api-mongo
-        name: api-mongo
+        name: api-nocheck
         resources:
           limits:
             memory: "256Mi"
@@ -27,21 +27,6 @@ spec:
         ports:
         - name: api-mongo
           containerPort: 5000
-        livenessProbe:
-          httpGet:
-            path: /_status/mongo/healthz
-            port: 5000
-          initialDelaySeconds: 30
-          timeoutSeconds: 1
-        readinessProbe:
-          exec:
-            command:
-            - /app/readiness.sh
-          initialDelaySeconds: 5
-          timeoutSeconds: 1
-
-
-      restartPolicy: Always
 
 
 # curl -H "Content-Type: application/json" -X POST -d '{"title":"Hola", "body": "hello World!"}' http://172.17.4.202:30001/entries
